<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/firstFragment"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_animation"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".fragments.FirstFragment">

    <ImageView
        android:id="@+id/imageFirstFragment"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:src="@drawable/slide_one_img" />

    <TextView
        android:id="@+id/titleFirstFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100sp"
        android:gravity="center"
        android:text="@string/title1"
        android:textColor="@color/colorThird"
        android:textSize="26dp" />

    <TextView
        android:id="@+id/descriptionsFirstFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato_light"
        android:gravity="center"
        android:text="@string/description1"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/nextFirstFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/lato_light"
            android:gravity="bottom|end"
            android:text="@string/next"
            android:textColor="@color/colorThird"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>